# Marshal

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  requirements-ci.txt  requirements-figures.txt
.cursor/rules/: formal-lean-build.mdc  plan-fidelity-zero-tolerance.mdc  proof-program-execution.mdc  theorem-ab-fortress.mdc
.github/workflows/: ci.yml
docs/AnaVM/: Errors.md  FormalBridge.md  MrsLanguage.md  README.md  SymRegistry.json
docs/Analysis/: AnalyticConnesProgram.md  AnsatzRegistry.json  CMIGapLedger.md  ClayYMBridge.md  ConnesAnalyticFortress.md  ConnesArchimedeanAction.md  ConnesBerryKeating.md  ConnesCompactResolvent.md  ConnesOperatorConstruction.md  CrossSectorLemmaProofAttempts.md  CrossSectorLerchContinuumClosure.md  CrossSectorLerchContinuumProof.md  CrossSectorR01LinearBoundProof.md  CrossSectorScrewBaEq25LowerBound.md  CrossSectorSigmaHigherClassicalProof.md  CrossSectorStep5RayleighLowerBound.md  CrossSectorSuzukiDominationAttack.md  CrossSectorWeilPositivityBattlePlan.md  CylinderClass.md  CylinderNoGo.md  Discipline.md  ExplicitFormulaDuality.md  FormalConnesProofProgram.md  FrequencyLockImpossibility.md  GL2BSDMillenniumProofProgram.md  GL2BSDProofProgram.md  GL2GoldbachProofProgram.md  GL3HodgeMillenniumProofProgram.md  GL3HodgeProofProgram.md  GL4YMMillenniumProofProgram.md  GL4YMProofProgram.md  GLnMRSProofSpine.md  GLnPlugAndPlayArchitecture.md  GlobalOperatorHunt.md  GrandUnificationManifesto.md  HodgeK3Outlook.md  HolyFunctionOutlook.md  HolyFunctionWDWOutlook.md  IdentificationTheoremSpine.md  InvestigationFramework.md  (+30 more)
docs/Engine/: KernelContract.md
docs/Falsification/: CylinderSpectrum.md  GaussVsSinc2.md  QuotientGammaTuned.md  Sinc2Mismatch.md
docs/Formal/: AdeleQuotient.lean  ConnesAnalyticFortress.lean  ConnesAnalyticProof.lean  CylinderNoGo.lean  ExtensionSelection.lean  FortressObligations.lean  GlobalConnesDiracLimit.lean  GlobalOperatorProof.lean  GlobalSpectralAction.lean  HPWeil.lean  MarshalCertAdapter.lean  PUBLICATION_STATUS.md  PoissonDuality.lean  PoissonGueNoGo.lean  README.md  SpectralActionSelection.lean  SpectralDiscreteness.lean  V1LemmaProof.lean  V1ProofChain.lean  XiSpectralDeterminantDiscipline.lean  lake-manifest.json  lakefile.lean  scratch_check.lean
docs/Heat/: HeatCylinderOperator.md  HeatTraceSweep.md  QuotientDiagnostic.md  README.md  TailRegime.md
docs/figures/: figures.tex  manifest.json
programs/: adelic_cauchy_completion.mrs  adelic_epsilon_sweep.mrs  berry_keating.mrs  bk_extension_probe.mrs  bk_trace_probe.mrs  connes_analytic_construction.mrs  connes_analytic_lemmas.mrs  connes_assembly_search.mrs  connes_crossed_product.mrs  connes_global_dirac_limit.mrs  cylinder_direct_sum.mrs  exponent_klogp.mrs  logp_catalog.mrs  logp_frequency.mrs  logp_prime_dual.mrs  marshal_ladder.mrs  marshal_wdw.mrs  marshal_wedge_analytic.mrs  marshal_xi_hadamard.mrs  marshal_ymh.mrs  quotient_gamma_tuned.mrs  quotient_sunit_lowmode.mrs  spectral_action_selection.mrs
programs/investigations/: theorem_a_analytic.mrs  theorem_ab.mrs  theorem_b.mrs
programs/lib/: certified_bounds.mrs  classical_rh.mrs  gln_spectral_triple.mrs  ladder_analytic_lemmas.mrs  marshal_array_primitives.mrs  marshal_bsd_analytic_lemmas.mrs  marshal_bsd_calculus.mrs  marshal_bsd_millennium_lemmas.mrs  marshal_bsd_millennium_proof.mrs  marshal_bsd_proof.mrs  marshal_bsd_universal.mrs  marshal_bsd_universal_lemmas.mrs  marshal_convergence_primitives.mrs  marshal_cross_sector_analytic_lemmas.mrs  marshal_cross_sector_balance.mrs  marshal_cross_sector_battleplan.mrs  marshal_cross_sector_lerch_classical_proofs.mrs  marshal_cross_sector_lerch_continuum.mrs  marshal_cross_sector_lerch_strategies.mrs  marshal_cross_sector_phase4a.mrs  marshal_cross_sector_screw_Ba_analytic.mrs  marshal_cross_sector_screw_Ba_eq25_lower_bound.mrs  marshal_cross_sector_step5.mrs  marshal_cross_sector_step5_suzuki.mrs  marshal_formal_symbols.mrs  marshal_fp_primitives.mrs  marshal_gln_positivity_synthesis.mrs  marshal_goldbach_analytic_lemmas.mrs  marshal_goldbach_calculus.mrs  marshal_goldbach_proof.mrs  marshal_hadamard_calculus.mrs  marshal_hadamard_closure.mrs  marshal_hadamard_proof.mrs  marshal_hodge_analytic_lemmas.mrs  marshal_hodge_calculus.mrs  marshal_hodge_millennium_lemmas.mrs  marshal_hodge_millennium_proof.mrs  marshal_hodge_proof.mrs  marshal_hodge_universal.mrs  marshal_hodge_universal_lemmas.mrs  (+21 more)
programs/templates/: archimedean_boundary.mrs.stub  berry_keating.mrs.stub  connes_triple.mrs.stub  operator_test.mrs.stub
scripts/: BuildMarshal.py  README.md  TestSuite.py  build_toys.py  compare_spectral.py  export_reference.py  fit_exp_poly.py  generate_luts.py  global_quotient_spectrum.py  idele_class_laplacian.py  idele_quotient_laplacian.py  investigate_discrepancy.py  plot_residuals.py  refine_zeros_rs.py  run_checks.py  run_global_phase.py  run_hp_audit.py  run_hp_local_proof.py  sigma_residual_sweep.py  test_reference.py  validate_global_spectrum.py  verify_weil.py  xi_spectral_det.py
sources/Marshal/: Compat.hxx  Config.cxx  Config.hxx  MarshalDriver.cxx  TraceApi.cxx  TraceApi.hxx  TraceEngine.cxx
tests/Benchmarks/: HeatTraceBench.cxx  MicrokernelBench.cxx
tests/Fixtures/: Thresholds.json
tests/Integration/: AnaVmLadderPipelineTest.cxx  AnaVmXiHadamardPipelineTest.cxx  NtzParityTest.cxx
tests/Unit/: AnaLeanEmitterTest.cxx  AnaProofEngineTest.cxx  AnaVmSymTest.cxx  ArchimedeanBoundaryTest.cxx  BatchKernelTest.cxx  BerryKeatingTest.cxx  CompletionValidationTest.cxx  InvestigationTypesTest.cxx  LogPrimeOperatorTest.cxx  MrsHadamardProofGateTest.cxx  MrsKernelTest.cxx  MrsLadderProofGateTest.cxx  MrsMathTest.cxx  MrsModuleTest.cxx  MrsProofAuditTest.cxx  MrsTransformTest.cxx  SupportTest.cxx  ValidationRouterTest.cxx  test_analyzer_registry.py
tools/: marshal_bin.py
tools/Analysis/: ContinuumPersistenceCheck.py  ConvergenceRateAnalysis.py  CrossSectorBalanceStudy.py  CrossSectorWeilGridStudy.py  DensityGrowthStudy.py  EmitAdelicHeightGridCert.py  EmitCrossSectorBalanceCert.py  EmitCrossSectorWeilBattlePlanCert.py  EmitMarshalCert.py  (+77 more)
(+411 files in other folders)
